Fixed broken layout when posts end with floated images

--- a/sass/_05_layout.scss
+++ b/sass/_05_layout.scss
@@ -2,11 +2,14 @@
 ----------------------------------------------- */
 
 .clearfix:before,
-.clearfix:after {
+.clearfix:after,
+.entry-content:before,
+.entry-content:after {
     content: " ";
     display: table;
 }
-.clearfix:after {
+.clearfix:after,
+.entry-content:after {
     clear: both;
 }
 /* Text meant only for screen readers */
